@@ -37,9 +37,9 @@ import org.gradle.build.ClasspathManifest
 import org.gradle.gradlebuild.BuildEnvironment
 import org.gradle.gradlebuild.BuildEnvironment.agentNum
 import org.gradle.gradlebuild.java.AvailableJavaInstallations
-import org.gradle.internal.jvm.Jvm
 import org.gradle.kotlin.dsl.*
 import org.gradle.process.CommandLineArgumentProvider
+import java.util.concurrent.Callable
 import testLibraries
 import testLibrary
 import java.util.jar.Attributes
@@ -98,10 +98,12 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
         if (!jdkForCompilation.current) {
             options.forkOptions.javaHome = jdkForCompilation.javaHome
         }
-        compileTask.inputs.property("javaInstallation", when (compileTask) {
-            is JavaCompile -> jdkForCompilation
-            else -> availableJavaInstallations.currentJavaInstallation
-        }.displayName)
+        compileTask.inputs.property("javaInstallation", Callable {
+            when (compileTask) {
+                is JavaCompile -> jdkForCompilation
+                else -> availableJavaInstallations.currentJavaInstallation
+            }.vendorAndMajorVersion
+        })
     }
 
     private
@@ -152,14 +154,18 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
         tasks.withType<Test>().configureEach {
             maxParallelForks = project.maxParallelForks
             jvmArgumentProviders.add(createCiEnvironmentProvider(this))
-            executable = Jvm.forHome(javaInstallationForTest.javaHome).javaExecutable.absolutePath
+            executable = javaInstallationForTest.jvm.javaExecutable.absolutePath
             environment["JAVA_HOME"] = javaInstallationForTest.javaHome.absolutePath
             if (javaInstallationForTest.javaVersion.isJava7) {
                 // enable class unloading
                 jvmArgs("-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
             }
+            if (javaInstallationForTest.javaVersion.isJava9Compatible) {
+                //allow embedded executer to modify environment variables
+                jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+            }
             // Includes JVM vendor and major version
-            inputs.property("javaInstallation", javaInstallationForTest.displayName)
+            inputs.property("javaInstallation", Callable { javaInstallationForTest.vendorAndMajorVersion })
             doFirst {
                 if (BuildEnvironment.isCiServer) {
                     logger.lifecycle("maxParallelForks for '$path' is $maxParallelForks")
